welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: Missing closing brace `}' assumed here
def move(nbPas: Int, versLAvant: Boolean){
^Program:5: error: Missing closing brace `}' assumed here
}
^